# rust-web

./: .env.example  .gitignore  Cargo.toml  README.md  tailwind.config.js
migrations/: 20260106015313_create_users_table.sql  20260106015411_create_sensors_table.sql
src/: main.rs  state.rs
src/models/: mod.rs  sensor.rs  user.rs
src/routes/: dashboard.rs  users.rs
src/routes/api/: mod.rs  sensor.rs  user.rs
src_js/: app.js
templates/: base.html.tera  dashboard.html.tera  users.html.tera
